--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -15,3 +15,9 @@ slides:
   - image: "/assets/image/event/team_building.jpg"
     alt: "Team building event"
     caption: "First team building event, Feb 2026."
+
+  - image: "/assets/image/event/EIML2025.JPG"
+    alt: "EIML workshop"
+    caption: "EPIC Lab coorganised the First Workshop of Epistemic Intelligence in Machine Learning at EurIPS 2025!"
+
+
